tests/__snapshots__/validation-configFile-handles-tabs.snap.txt
Error: Value for the 'failFast' option must be a boolean.

  1 | {
  2 |  "failFast": "always",
    |              ~~~~~~~~
  3 |  "target": true
  4 | }
  5 | 

      at ./tstyche.config.json:2:14

Error: Value for the 'target' option must be a string.

  1 | {
  2 |  "failFast": "always",
  3 |  "target": true
    |            ~~~~
  4 | }
  5 | 

      at ./tstyche.config.json:3:12

